--- a/README
+++ b/README
@@ -2,6 +2,6 @@ Project: Template
 
 INCLUDED:
     simple auth: login, logout
-    bootstrap 3.0, chosen 1.0 (jquery 2.0.3), ajaxChosen, noty
+    bootstrap 3.0.2, select2-3.4.5 noty-2.1.0 (need nodejs bower to install it via bower.json)
     helpers: render_to and stuff
     js helpers
