--- a/docs/locale/ru/LC_MESSAGES/modules.po
+++ b/docs/locale/ru/LC_MESSAGES/modules.po
@@ -1,5 +1,5 @@
 #
-# NickolasFox <lilfoxster@gmail.com>, 2013.
+# NickolasFox <tarvitz@blacklibrary.ru>, 2013.
 #
 msgid ""
 msgstr ""
@@ -7,7 +7,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-22 02:24+0400\n"
 "PO-Revision-Date: 2013-11-22 03:24+0400\n"
-"Last-Translator: NickolasFox <lilfoxster@gmail.com>\n"
+"Last-Translator: NickolasFox <tarvitz@blacklibrary.ru>\n"
 "Language-Team: ru <ru>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
